# mathInterval

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.ru.md  README_pip.md  bindings.cpp  interval.h  load_stubgen.sh  mathIntervalConfig.cmake.in  pyproject.toml  qodana.sarif.json  qodana.yaml  sample.cpp  setup.py  test.cpp  test.py
.github/workflows/: build-test-wheels.yml  build-wheels.yml  pybind11_stubgen.yml  qodana_code_quality.yml
Testing/: main_test.cpp  sample.cpp  test1.cpp  verifier.cpp  verifier.h
Testing/copy_count/: copy_count.cpp
Testing/cpp/: generator_test1.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test_generator1.cpp  test_generator2.cpp  test_generator4.cpp  time_test1.cpp
Testing/custom_type/cpp/: base.cpp  test1.many_funcs.cpp  test2.custom_transfer.cpp
Testing/custom_type/python/: test1.py  test2.py
Testing/generator/: base.cpp  test1.inverse.cpp  test2.plus_transfer.cpp  test3.mul_transfer.cpp  test4.div_transfer.cpp
Testing/many_set/cpp/: test1.equal.cpp  test2.subset.cpp
Testing/many_set/python/: test1.py  test2.py
Testing/one_set/cpp/: test1.add_point.cpp  test2.add_interval.cpp  test3.multi_add.cpp  test4.remove_clear_empty_full.cpp  test5.inverse.cpp  test6.in_inverse_points_only.cpp  test7.transfer_operations.cpp  test8.remainder.cpp  test9.any.cpp
Testing/one_set/python/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
Testing/python/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
Testing/time_test/: base.cpp  test1.inverse.cpp  test2.plus_transfer.cpp  test3.mul_transfer.cpp  test4.div_transfer.cpp  time_test.register.cpp
Testing/time_tests/: time_test.register.cpp  time_test1.cpp  time_test1.register.cpp  time_test2.cpp
base/: setup_without_stubgen.py
docs/: reference.md  reference.ru.md
include/: additional_test_tools.h  args.h  interval.h  pyObject.h  register.h  time_test_base.h  verifier.h
include/mathInterval/: interval.h  print_policy.h  type_policy.h
include/mathInterval/detail/: base.h  standard_policy.h
include/test_base/: copy_count_base.h  custom_type_base.h  generate_test_base.h  time_test_base.h
libs/: __init__.py  setup.py
mathInterval/: mathInterval.pyi
src/: additional_test_tools.cpp  args.cpp  bindings.cpp  register.cpp  repair_stubgen.sh  time_test_base.cpp  verifier.cpp  verifier_bindings.cpp  writer.cpp
test/: sample.cpp  test.cpp  test.py
